# diachronic-hwe

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
diachronic_hwe/: utils.py
diachronic_hwe/ai-finder/: finder.py  gpt_config.toml
diachronic_hwe/ai-finder/prompts/: sense_validation.tmpl
diachronic_hwe/ai_finder/: config.toml  data_format.txt  finder.py
diachronic_hwe/ai_finder/prompts/: generate_examples.tmpl  imene_retrieve.tmpl  retrieve_labels.tmpl  sense_validation.tmpl  target_words.tmpl
diachronic_hwe/data/: processor.py  schemas.py
diachronic_hwe/hwe/: embeddings.py  infer_hwe.py  pre_train.py  preprocessing.py  sense_embeddings.py  train.py  train_hwe.py
diachronic_hwe/hwe/config/: config.toml
diachronic_hwe/ocr/: preprocessing.py
diachronic_hwe/rag/: manager.py
hwe/: __init__.py  utils.py
hwe/data/: extraction.py  processor.py  schemas.py
hwe/rag/: manager.py
