[tool.poetry]
name = "diachronic-hwe"
version = "0.1.0"
description = "The Code for my thesis, Hierarchical Word Embeddings to model semantic shift"
authors = ["Aymane H."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.3"
requests = "^2.31.0"
pydantic = "^2.5.2"
pillow = "^10.1.0"
pytesseract = "^0.3.10"
nltk = "^3.8.1"
gensim = "^4.3.2"
python-dotenv = "^1.0.0"
langchain = "^0.1.0"
openai = "^1.6.1"
chromadb = "^0.4.22"
tiktoken = "^0.5.2"
sentence-transformers = "^2.2.2"
toml = "^0.10.2"
spacy = "^3.7.2"
transformers = "^4.37.2"
lz4 = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
